[package]
name = "traffic_simulation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "traffic_sim"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:crossterm", "dep:ratatui", "dep:env_logger", "dep:anyhow", "dep:rand", "dep:uuid"]

[dependencies]
# Ядро (общее)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
thiserror = "1.0"
log = "0.4"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# CLI (только для бинарника)
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.24", optional = true }
env_logger = { version = "0.10", optional = true }
anyhow = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }